2005-01-27 14:15 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridEvaluateOnEdge, gridEvaluateOnFace) added
	evaluation methods.
	* src/gridshape.c (gridCurvedEdgeMidpoint) replaced projection
	with evaluation to spped up exectsion and to improve the
	repeatablity of the vality check.
	* src/gridinsert.c (gridSplitEdge) implemented local edge
	midpoint routine because gridCurvedEdgeMidpoint would no pass
	old unit tests.
	
2005-01-27 11:30 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c to speed up the adaptation cycles, I have
	reduced the number of smooths and swaps and set the limits to
	the defaults (-1).

2005-01-27 10:55 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridCollapseEdge) Correctly constructed new
	surface topology (edges and faces) to use to project common
	node. This is required for the validity checks.

2005-01-27 09:12 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeAt) Correctly constructed new
	surface topology (edges and faces) to use to project node as it is
	created. This is required for the validity checks.
	* src/gridmpi.c (gridParallelEdgeSplit) removed the gridSplitEdgeAt
	returned EMPTY warning. A split `undo' is correctly parallelized.

2005-01-26 20:40 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdapt) removed the project argument from
	adapt. Nodes will always be projected from now on.

2005-01-26 19:55 Mike Park  <mike.park@nasa.gov>

	* WARNING: continuing effort to merge unit mesh research path
	with production path. I have uncovered a few inconsistancies.
	It is suggested that you use last release (1.2.4) for production
	work.
	* src/gridinsert.c removed the last of SURFACE_VALIDITY #def's
	* src/Makfile.am removed libUnitMesh.a, unit_main uses standard 
	libMesherX.a

2005-01-26 19:05 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridAR) use correct cost constraints indicated
	by gridCostConstraint.

2005-01-26 17:26 Mike Park  <mike.park@nasa.gov>
