@@ -1,3 +1,10 @@
+2005-01-27 14:56 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridcad.c (gridUpdateParameters) added as hack. It projects
+	node to every edge and face it can find to update parameters.
+	I need to spend time and clean up all these cad routines
+	to minimize raw projection.
+
 2005-01-27 14:15 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridcad.c (gridEvaluateOnEdge, gridEvaluateOnFace) added
